cloudformation/awsredshift.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "AWS Immersive Day 2021",
    "Parameters": {
      "KeyName": {
        "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
        "Type": "AWS::EC2::KeyPair::KeyName",
        "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
      }
    },
    "Resources": {
     "RedShiftCluster": {
        "Type": "AWS::Redshift::Cluster",
        "Properties": {
          "AllowVersionUpgrade": "true",
          "AutomatedSnapshotRetentionPeriod": "0",
          "AvailabilityZone": "us-east-1a",
          "ClusterType": "single-node",
          "DBName":"testdrive",
          "MasterUsername": "qlik123",
          "MasterUserPassword": "Aws_immersion123",
          "NodeType": "dc2.large",
          "PubliclyAccessible": "true",
          "VpcSecurityGroupIds": [ {
            "Ref": "QlikSecurityGroup"
          } ],
          "ClusterSubnetGroupName": {
            "Ref": "RedshiftClusterSubnetGroup"
        }
        }
      },
     "RedshiftClusterSubnetGroup": {
        "Type": "AWS::Redshift::ClusterSubnetGroup",
        "Properties": {
          "Description": "Redshift Cluster Subnet Group",
          "SubnetIds": [ {"Ref": "PrivateSubnet"} ]
        }
      },
      
      "QlikSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupName": {
            "Fn::Join": [
              "",
              [
                {
                  "Ref": "AWS::StackName"
                },
                "-QlikSecurityGroup"
              ]
            ]
          },
          "GroupDescription": "Default Security Rules for AWS Immersion Day",
          "VpcId": {
            "Ref": "VPC"
          },
          "SecurityGroupIngress": [
            {
              "IpProtocol": "tcp",
              "FromPort": 80,
              "ToPort": 80,
              "CidrIp": "0.0.0.0/0"
            },
            {
              "IpProtocol": "tcp",
              "FromPort": 443,
              "ToPort": 443,
              "CidrIp": "0.0.0.0/0"
            },
            {
              "IpProtocol": "tcp",
              "FromPort": 3552,
              "ToPort": 3552,
              "CidrIp": "0.0.0.0/0"
            },
            {
              "IpProtocol": "tcp",
              "FromPort": 5430,
              "ToPort": 5430,
              "CidrIp": "0.0.0.0/0"
            },
            {
              "IpProtocol": "tcp",
              "FromPort": 5439,
              "ToPort": 5439,
              "CidrIp": "0.0.0.0/0"
            }
          ]
        }
      },
      "VPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "10.0.0.0/24",
          "EnableDnsSupport": true,
          "EnableDnsHostnames": true,
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            },
            {
              "Key": "Name",
              "Value": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "AWS::StackName"
                    },
                    "-VPC"
                  ]
                ]
              }
            }
          ]
        }
      },
      "InternetGateway": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            },
            {
              "Key": "Network",
              "Value": "Public"
            },
            {
              "Key": "Name",
              "Value": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "AWS::StackName"
                    },
                    "-IG"
                  ]
                ]
              }
            }
          ]
        }
      },
      "AttachGateway": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "InternetGatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
    "PrivateSubnet":{
       "Type": "AWS::EC2::Subnet",
       "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.0.0.128/25"
      }
    },
      "PublicSubnet": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "CidrBlock": "10.0.0.0/25",
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            },
            {
              "Key": "Network",
              "Value": "Public"
            },
            {
              "Key": "Name",
              "Value": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "AWS::StackName"
                    },
                    "-PublicSubnet"
                  ]
                ]
              }
            }
          ]
        }
      },
      "PublicRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "Tags": [
            {
              "Key": "Application",
              "Value": {
                "Ref": "AWS::StackId"
              }
            },
            {
              "Key": "Network",
              "Value": "Public"
            },
            {
              "Key": "Name",
              "Value": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "AWS::StackName"
                    },
                    "-PublicRouteTable"
                  ]
                ]
              }
            }
          ]
        }
      },
      "PublicRoute": {
        "Type": "AWS::EC2::Route",
        "DependsOn": "AttachGateway",
        "Properties": {
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
      "PublicSubnetRouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "PublicSubnet"
          },
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          }
        }
      }
    },
    "Outputs": {
      "VPCName": {
        "Description": "Name of the newly created VPC",
        "Value": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "AWS::StackName"
              },
              "-QlikImmersionDayNode"
            ]
          ]
        }
      },
      "VPC": {
        "Description": "Id of the newly created VPC ",
        "Value": {
          "Ref": "VPC"
        }
      },
      "SecurityGroupName": {
        "Description": "Name of the newly created Security Group",
        "Value": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "AWS::StackName"
              },
              "-QlikSecurityGroup"
            ]
          ]
        }
      },
      "SecurityGroup": {
        "Description": "Id of the newly created EC2 Security Group",
        "Value": {
          "Ref": "QlikSecurityGroup"
        }
      },
      "GithubDocumentation": {
        "Description": "URL of Github Documenation",
        "Value": "https://github.com/Qlik-PE/AWS-Cloudformation"
      }
    }
  }
